--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
